<resources>
    <string name="app_name">Gameeditor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="current_property">人物属性</string>
    <string name="current_equipment">人物装备</string>
    <string name="current_point_plus">人物加点</string>
    <string name="point_plus_default">0</string>
    <string name="current_level">当前等级</string>
    <string name="surplus_point">剩余点数</string>
    
    <string name="explain">请打开左侧侧滑菜单选择功能进行使用</string>
    <string name="menu_current_property">角色当前属性</string>
    <string name="menu_current_equipment">角色当前装备</string>
    <string name="menu_plus_equipment">添加新装备</string>
    <string name="menu_edit_equipment">保存修改</string>
    <string name="menu_plus_part">添加新角色</string>
    <string name="menu_show_equipment">查看装备</string>
    <string name="menu_about">关于</string>

    <string name="clothes">衣服</string>
    <string name="head">头饰</string>
    <string name="bracelet">手饰</string>
    <string name="belt">腰部装饰</string>
    <string name="gemstone">宝石</string>
    <string name="ornaments">装饰</string>
    <string name="pant">下装</string>
    <string name="shoes">战靴</string>
    <string name="sword">武器</string>
    <string name="wing">背饰</string>
    <string name="shield">防具</string>
    <string name="necklace">项链</string>
    <string name="ring">戒指</string>

    <string name="type">种类</string>
    <string name="live">生命</string>
    <string name="magic">魔法</string>
    <string name="attack">攻击</string>
    <string name="defence">防御</string>
    <string name="duck">闪避</string>
    <string name="speed">速度</string>
    <string name="strength">力量</string>
    <string name="intelligence">智力</string>
    <string name="spirit">体力</string>
    <string name="quick">敏捷</string>
    <string name="skill">技能</string>
    <string name="equipment_name">装备名</string>
    <string name="equipment_level">装备等级</string>
    <string name="required_level">所需等级</string>
    <string name="extra_skill">附加技能</string>
    <string name="special_efficiency">特效</string>
    <string name="magic_attack">魔攻</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="job">职业</string>
    <string name="livejob">生活职业</string>
    <string name="currentid">人物ID</string>
    <string name="shengwang">声望</string>
    <string name="shengmi">神秘</string>
    <string name="level">等级</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introduce">打开角色当前属性，输入角色的基本信息，职业，等级等等 之后进入到加点界面（不进入的话之后程序就会报错，必须卸载重装才能解决）\nPS： 若是要修改点数所对应的属性值，修改之后记得手动还原角色的属性值\n如要修改1点力量对应5点攻击，则需要将角色的攻击属性还原，其他的未修改则无需修改，之后在进行加点即可</string>


</resources>
