<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/new_sword"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@drawable/check_button_bg"
            android:text="@string/sword"
            />

        <Button
            android:id="@+id/new_shield"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@drawable/check_button_bg"
            android:text="@string/shield"
            />

        <Button
            android:id="@+id/new_head"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@drawable/check_button_bg"
            android:text="@string/head"
            />

        <Button
            android:id="@+id/new_clothes"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@drawable/check_button_bg"
            android:text="@string/clothes"
            />

        <Button
            android:id="@+id/new_pant"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@drawable/check_button_bg"
            android:text="@string/pant"
            />

        <Button
            android:id="@+id/new_belt"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@drawable/check_button_bg"
            android:text="@string/belt"
            />

        <Button
            android:id="@+id/new_shoes"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@drawable/check_button_bg"
            android:text="@string/shoes"
            />

        <Button
            android:id="@+id/new_gemstone"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@drawable/check_button_bg"
            android:text="@string/gemstone"
            />

        <Button
            android:id="@+id/new_wing"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@drawable/check_button_bg"
            android:text="@string/wing"
            />

        <Button
            android:id="@+id/new_bracelet"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@drawable/check_button_bg"
            android:text="@string/bracelet"
            />

        <Button
            android:id="@+id/new_ring"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@drawable/check_button_bg"
            android:text="@string/ring"
            />

        <Button
            android:id="@+id/new_necklace"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@drawable/check_button_bg"
            android:text="@string/necklace"
            />
    </LinearLayout>


</ScrollView>
