<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp">
        <ImageView
            android:id="@+id/headPicture"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_header_height"
            android:scaleType="fitXY"
            android:src="@drawable/index"/>
        <ImageButton
            android:id="@+id/changePicture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:src="@drawable/picture"/>

    </RelativeLayout>


    <Button
        android:id="@+id/current_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/check_button_bg"
        android:layout_weight="0.06"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/menu_current_property"/>

    <Button
        android:id="@+id/current_equipment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/check_button_bg"
        android:gravity="center"
        android:textStyle="bold"

        android:text="@string/menu_current_equipment"
        android:layout_weight="0.06"/>
    <Button
        android:id="@+id/new_equipment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/check_button_bg"
        android:textStyle="bold"
        android:text="@string/menu_plus_equipment"
        android:layout_weight="0.06"/>
    <Button
        android:id="@+id/show_equipment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/check_button_bg"
        android:text="@string/menu_show_equipment"
        android:textStyle="bold"
        android:layout_weight="0.06"/>
    <Button
        android:id="@+id/new_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/check_button_bg"
        android:textStyle="bold"
        android:text="@string/menu_plus_part"
        android:layout_weight="0.06"/>

    <Button
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/menu_about"
        android:background="@drawable/check_button_bg"
        android:textStyle="bold"
        android:layout_weight="0.06"/>
</LinearLayout>
